<resources>
    <string name="app_name">Valo.ai</string>
    <string name="login_image_illustration">Login Image Illustration</string>
    <string name="login_to">Masuk ke</string>
    <string name="register_to">Daftar ke</string>
    <string name="valo_ai">Valo.Ai</string>
    <string name="password">Kata Sandi</string>
    <string name="email">Email</string>
    <string name="phone">Nomor Telepon</string>
    <string name="password_confirmation">Konfirmasi Kata Sandi</string>
    <string name="btn_to_register_text">Daftar Sekarang</string>
    <string name="btn_to_login_text">Login Sekarang</string>
    <string name="login">Masuk</string>
    <string name="already_vaksin">Sudah Pernah</string>
    <string name="not_already_vaksin">Belum Pernah</string>
    <string name="register">Register</string>
    <string name="does_not_have_an_account">Belum punya akun?</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="get_started">Mulai Sekarang</string>
    <string name="back_button">Tombol Kembali</string>
    <string name="banner_informasi_vaksin">Image by Alexandra_Koch from Pixabay</string>
    <string name="vaccine_location_text">Lokasi Vaksin</string>
    <string name="age_recommendation_text">Sasaran Usia</string>
    <string name="description">Keterangan</string>
    <string name="title_activity_vaksin_location_maps">VaksinLocationMapsActivity</string>
    <string name="onboarding_illustration">Onboarding Illustration</string>
    <string name="web_client_id">934521763666-u0vbnqbf5nuescmngfcc2nbceep91oj2.apps.googleusercontent.com</string>
    <string name="terms_and_policies">Menyetujui persyaratan dan kebijakan</string>
    <string name="personal_text">Personal Information</string>
    <string name="update_personal_text">Update Personal Information</string>
    <string name="personal_dec">Masukan informasi personal informasi kamu agar kami bisa merekomendasikan vaksin yang relavan</string>
    <string name="name">Name</string>
    <string name="selesai">Selesai</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="riwayat1">Riwayat Penyakit 1</string>
    <string name="riwayat2">Riwayat Penyakit 2</string>
    <string name="vaksin_radio">Sudah Pernah Vaksin?</string>
    <string name="vakin1">Vaksin 1</string>
    <string name="vakin3">Vaksin 3</string>
    <string name="vakin2">Vaksin 2</string>
    <string name="text_home">Home</string>
    <string name="text_riwayat">Riwayat</string>
    <string name="inactive">inactive</string>
    <string name="active">active</string>
    <string name="greeting">Selamat Datang,</string>
    <string name="Profile">avatar</string>
    <string name="rekomendasi_list">Rekomendasi Vaksin</string>
    <string name="riwayat_list">Riwayat Vaksin</string>
    <string name="km10">10 Km</string>
    <string name="AstraZeneca">20 AZ</string>
    <string name="Sinovac">15 SV</string>
    <string name="google_signin_failed">Login dengan Googe gagal!</string>
    <string name="label_vaccine_type">Jenis vaksin tersedia</string>
    <string name="show_rute">Tampilkan Rute</string>
    <string name="gps_message">Aktifkan GPS Supaya kamu dapat mengetahui lokasi vaksin terdekat</string>
    <string name="vakin">Vaksin</string>
    <string name="n_a">n/a</string>
    <string name="success">Success</string>
    <string name="success_dialog_message">Isi pesan kami disini</string>
    <string name="continue_btn">Continue</string>
    <string name="profile_image">Profile_Image</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_vaksin">Edit Vaksin</string>
    <string name="google_logo">Google Logo</string>
    <string name="login_dengan_google">Login dengan Google</string>
    <string name="date_v1">Tanggal Vaksin 1</string>
    <string name="date_v2">Tanggal Vaksin 2</string>
    <string name="date">tanggal</string>
    <string name="vaksin_ke">Vaksin ke:</string>
    <string name="_1">1</string>
    <string name="simpan">Simpan</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="edit">Edit</string>
    <string name="batal_btn">Batal</string>
</resources>