<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/label_register"
            style="@style/HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/register_to"
            app:layout_constraintStart_toStartOf="@+id/image_register"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_register_vola"
            style="@style/HeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/valo_ai"
            android:textColor="@color/blue_primary"
            app:layout_constraintBottom_toBottomOf="@+id/label_register"
            app:layout_constraintEnd_toEndOf="@+id/image_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label_register"
            app:layout_constraintTop_toTopOf="@+id/label_register"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/image_register"
            android:layout_width="200dp"
            android:layout_height="128dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/login_image_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_register"
            app:srcCompat="@drawable/login_image" />

        <TextView
            android:id="@+id/label_name"
            style="@style/ParagraphText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:labelFor="@id/field_name"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_name"
            app:placeholderText="Isi username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/label_password"
            style="@style/ParagraphText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/field_password"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_password"
            app:passwordToggleEnabled="true"
            app:placeholderText="Isi Password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/label_password_confirmation"
            style="@style/ParagraphText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/field_password"
            android:text="@string/password_confirmation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_password_confirmation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeWidth="2dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_password_confirmation"
            app:passwordToggleEnabled="true"
            app:placeholderText="Isi Password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/label_vaksin_radio"
            style="@style/ParagraphText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/vaksin_radio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_password_confirmation" />

        <Button
            android:id="@+id/btn_already_vaksin"
            style="@style/Button3Text"
            android:layout_width="147dp"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:text="@string/already_vaksin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_vaksin_radio" />

        <Button
            android:id="@+id/btn_login"
            style="@style/Button3TextSecondary"
            android:layout_width="147dp"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:text="@string/not_already_vaksin"
            app:layout_constraintBottom_toBottomOf="@+id/btn_already_vaksin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_already_vaksin" />

        <CheckBox
            android:id="@+id/checkbox_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/terms_and_policies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_already_vaksin" />

        <Button
            android:id="@+id/btn__npt_already_vaksin"
            style="@style/Button1Text"
            android:layout_width="363dp"
            android:layout_height="55dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_meat" />

        <TextView
            android:id="@+id/label_does_not_have_account"
            style="@style/ParagraphText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn__npt_already_vaksin" />

        <TextView
            android:id="@+id/btn_to_login"
            style="@style/ParagraphText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/btn_to_login_text"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/label_does_not_have_account"
            app:layout_constraintStart_toEndOf="@+id/label_does_not_have_account"
            app:layout_constraintTop_toTopOf="@+id/label_does_not_have_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
