<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollIndicators="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp"
        tools:context=".features.detail_faskes.presentation.DetailFaskesActivity">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/faskes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="UPTD Puskesmas Baros"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_back" />


        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/banner_informasi_vaksin"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faskes_name"
            app:srcCompat="@drawable/vaccine_illustration" />

        <TextView
            android:id="@+id/label_vaccine_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vaccine_location_text"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="SLB Negeri (Kel Baros) 2. UPTD Puskesmas Baros 3.Kantor Kel. Jayamekar"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_vaccine_location" />


        <TextView
            android:id="@+id/label_vaccine_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_vaccine_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_available_vaccine_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_vaccine_type" />

        <TextView
            android:id="@+id/label_vaccine_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_available_vaccine_type" />

        <TextView
            android:id="@+id/vaccine_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_vaccine_description"
            tools:text="lorem dolor amet - " />


        <Button
            android:id="@+id/btn_show_rute"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:drawableEnd="@drawable/ic_baseline_map_24"
            android:text="@string/show_rute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaccine_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
