<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/faskes_name"
        style="@style/Subtitle1Text"
        android:layout_marginTop="8dp"
        android:paddingBottom="2dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue_secondary"
        android:elevation="0dp"
        app:layout_constraintVertical_bias="0.2"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/faskes_name"
        app:layout_constraintTop_toBottomOf="@+id/faskes_name">

        <TextView
            style="@style/MiniText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:paddingVertical="2dp"
            android:text="@string/km10"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/blue_primary_secondary"
        android:elevation="0dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <TextView
            style="@style/MiniText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:paddingVertical="2dp"
            android:text="@string/AstraZeneca"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_primary_secondary"
        android:elevation="0dp"
        app:cardCornerRadius="5dp"
        android:layout_marginStart="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/cardView3">

        <TextView
            style="@style/MiniText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:paddingVertical="2dp"
            android:text="@string/Sinovac"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_baseline_location_city_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>